@@ -1,13 +1,13 @@
 package org.jabref.logic.cleanup;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
 import org.jabref.model.FieldChange;
 import org.jabref.model.entry.BibEntry;
 import org.jabref.model.entry.field.Field;
+import org.jabref.model.entry.field.FieldFactory;
 import org.jabref.model.entry.field.StandardField;
 import org.jabref.model.entry.identifier.ArXivIdentifier;
 
@@ -25,42 +25,55 @@ public class EprintCleanup implements CleanupJob {
         Optional<String> version = entry.getField(StandardField.VERSION);
         Optional<String> institution = entry.getField(StandardField.INSTITUTION);
 
-        for (Field field : Arrays.asList(StandardField.URL, StandardField.JOURNAL, StandardField.JOURNALTITLE, StandardField.NOTE, StandardField.EID)) {
-            Optional<ArXivIdentifier> arXivIdentifier = entry.getField(field).flatMap(ArXivIdentifier::parse);
+        for (Field field : List.of(
+                StandardField.URL,
+                StandardField.JOURNAL,
+                StandardField.JOURNALTITLE,
+                StandardField.VOLUME, // Sometimes, the LLM puts the arXiv ID in the volume field
+                StandardField.NOTE,
+                StandardField.EID,
+                FieldFactory.parseField("arxiv"))) {
+            entry.getField(field) // "getField" instead of "getFieldOrAlias", because the field is cleared later
+                 .flatMap(ArXivIdentifier::parse)
+                 .ifPresent(arXivIdentifier -> {
+                     String normalizedEprint = arXivIdentifier.asString();
 
-            if (arXivIdentifier.isPresent()) {
-                String normalizedEprint = arXivIdentifier.get().asString();
+                     if (version.isPresent() && !normalizedEprint.contains("v" + version.get())) {
+                         normalizedEprint += "v" + version.get();
+                     }
 
-                if (version.isPresent() && !normalizedEprint.contains("v" + version.get())) {
-                    normalizedEprint += "v" + version.get();
-                }
+                     if (institution.isPresent() && "arxiv".equalsIgnoreCase(institution.get())) {
+                         entry.clearField(StandardField.INSTITUTION)
+                              .ifPresent(changes::add);
+                     }
 
-                if (institution.isPresent() && "arxiv".equalsIgnoreCase(institution.get())) {
-                    entry.clearField(StandardField.INSTITUTION)
-                         .ifPresent(changes::add);
-                }
+                     entry.setField(StandardField.EPRINT, normalizedEprint)
+                          .ifPresent(changes::add);
 
-                entry.setField(StandardField.EPRINT, normalizedEprint)
-                     .ifPresent(changes::add);
+                     entry.setField(StandardField.EPRINTTYPE, "arxiv")
+                          .ifPresent(changes::add);
 
-                entry.setField(StandardField.EPRINTTYPE, "arxiv")
-                     .ifPresent(changes::add);
+                     arXivIdentifier.getClassification()
+                                    .flatMap(classification -> entry.setField(StandardField.EPRINTCLASS, classification))
+                                    .ifPresent(changes::add);
 
-                arXivIdentifier.get().getClassification()
-                               .flatMap(classification -> entry.setField(StandardField.EPRINTCLASS, classification))
-                               .ifPresent(changes::add);
+                     entry.clearField(field)
+                          .ifPresent(changes::add);
 
-                entry.clearField(field)
-                     .ifPresent(changes::add);
-
-                if (field.equals(StandardField.URL)) {
-                    // If we clear the URL field, we should also clear the URL-date field
-                    entry.clearField(StandardField.URLDATE)
-                         .ifPresent(changes::add);
-                }
-            }
+                     if (StandardField.URL == field) {
+                         // If we clear the URL field, we should also clear the URL-date field
+                         entry.clearField(StandardField.URLDATE)
+                              .ifPresent(changes::add);
+                     }
+                 });
         }
+
         entry.clearField(StandardField.VERSION).ifPresent(changes::add);
+
+        // Remove `journal = {arXiv}` if present
+        entry.getField(StandardField.JOURNAL)
+             .filter(journal -> "arxiv".equals(journal.toLowerCase()))
+             .ifPresent(_ -> entry.clearField(StandardField.JOURNAL).ifPresent(changes::add));
 
         return changes;
     }
